--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -12,7 +14,7 @@
         }
 
         body {
-            font-family: 'Futura', 'Century Gothic', 'Trebuchet MS', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             overflow: hidden;
             height: 100vh;
             width: 100vw;
@@ -40,33 +42,33 @@
         .quarter-content {
             font-size: clamp(2rem, 5vw, 4rem);
             font-weight: 700;
-            letter-spacing: 0.05em;
+            letter-spacing: 0.02em;
             z-index: 10;
             transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
 
-        /* Default quarter colors */
+        /* Applied HEX colors from image analysis */
         .quarter:nth-child(1) {
-            background: #1a1a1a;
-            color: #ffffff;
+            background: #000000;
+            color: #979797; /* Subtly greyed text as per "Arte" in image */
         }
 
         .quarter:nth-child(2) {
-            background: #f5f5f5;
+            background: #FFFFFF;
             color: #2a2a2a;
         }
 
         .quarter:nth-child(3) {
-            background: #9a9a9a;
-            color: #ffffff;
+            background: #979797;
+            color: #FFFFFF;
         }
 
         .quarter:nth-child(4) {
-            background: #FF0000;
-            color: #ffffff;
+            background: #C8322D;
+            color: #FFFFFF;
         }
 
-        /* Hover effects - grow within grid */
+        /* Hover effects */
         .grid-container:has(.quarter:nth-child(1):hover) {
             grid-template-columns: 1.3fr 0.7fr;
             grid-template-rows: 1.3fr 0.7fr;
@@ -87,15 +89,10 @@
             grid-template-rows: 0.7fr 1.3fr;
         }
 
-        .quarter:hover .quarter-content {
-            /* No font size change on hover */
-        }
-
         .quarter-details {
             display: none;
         }
 
-        /* Responsive adjustments */
         @media (max-width: 768px) {
             .grid-container {
                 grid-template-columns: 1fr 1fr;
@@ -110,40 +107,20 @@
 </head>
 <body>
     <div class="grid-container">
-        <!-- Quarter 1: Art -->
         <div class="quarter">
-            <h2 class="quarter-content">Art</h2>
-            <div class="quarter-details">
-                <p>Explore my creative work blending traditional and digital media. From installations to mixed media pieces.</p>
-                <a href="#art" class="quarter-btn">View Gallery</a>
-            </div>
+            <h2 class="quarter-content">Arte</h2>
         </div>
 
-        <!-- Quarter 2: Design -->
         <div class="quarter">
-            <h2 class="quarter-content">Design</h2>
-            <div class="quarter-details">
-                <p>Engineering design projects showcasing innovation in mechanical systems and product development.</p>
-                <a href="#design" class="quarter-btn">See Projects</a>
-            </div>
+            <h2 class="quarter-content">Diseño</h2>
         </div>
 
-        <!-- Quarter 3: Music -->
         <div class="quarter">
-            <h2 class="quarter-content">Music</h2>
-            <div class="quarter-details">
-                <p>Thoughts, sketches, and concepts bridging the gap between engineering precision and artistic expression.</p>
-                <a href="#ideas" class="quarter-btn">Explore</a>
-            </div>
+            <h2 class="quarter-content">Ideas</h2>
         </div>
 
-        <!-- Quarter 4: Contact -->
         <div class="quarter">
-            <h2 class="quarter-content">Contact</h2>
-            <div class="quarter-details">
-                <p>Limited edition prints, original works, and custom engineering solutions available for commission.</p>
-                <a href="#shop" class="quarter-btn">Browse</a>
-            </div>
+            <h2 class="quarter-content">Shop</h2>
         </div>
     </div>
 </body>
