--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             overflow: hidden;
             height: 100vh;
             width: 100vw;
+            background-color: #000;
         }
 
         .grid-container {
@@ -26,7 +27,6 @@
             grid-template-rows: 1fr 1fr;
             height: 100vh;
             width: 100vw;
-            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
 
         .quarter {
@@ -35,72 +35,58 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            /* Transition for the scale effect */
+            transition: transform 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94), z-index 0.1s;
+            z-index: 1;
             overflow: hidden;
         }
 
         .quarter-content {
             font-size: clamp(2rem, 5vw, 4rem);
             font-weight: 700;
-            letter-spacing: 0.02em;
-            z-index: 10;
-            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            letter-spacing: 0.05em;
+            transition: transform 0.4s ease;
         }
 
-        /* Applied HEX colors from image analysis */
+        /* Hover Effect: Only enlarges the hovered box */
+        .quarter:hover {
+            transform: scale(1.1); /* Enlarges the box by 10% */
+            z-index: 100; /* Ensures it pops above the other 3 boxes */
+            box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+        }
+
+        /* Specific HEX colors and text colors */
         .quarter:nth-child(1) {
             background: #000000;
-            color: #979797; /* Subtly greyed text as per "Arte" in image */
+            color: #ffffff;
         }
 
         .quarter:nth-child(2) {
             background: #FFFFFF;
-            color: #2a2a2a;
+            color: #000000;
         }
 
         .quarter:nth-child(3) {
             background: #979797;
-            color: #FFFFFF;
+            color: #ffffff;
         }
 
         .quarter:nth-child(4) {
             background: #C8322D;
-            color: #FFFFFF;
+            color: #ffffff;
         }
 
-        /* Hover effects */
-        .grid-container:has(.quarter:nth-child(1):hover) {
-            grid-template-columns: 1.3fr 0.7fr;
-            grid-template-rows: 1.3fr 0.7fr;
-        }
-
-        .grid-container:has(.quarter:nth-child(2):hover) {
-            grid-template-columns: 0.7fr 1.3fr;
-            grid-template-rows: 1.3fr 0.7fr;
-        }
-
-        .grid-container:has(.quarter:nth-child(3):hover) {
-            grid-template-columns: 1.3fr 0.7fr;
-            grid-template-rows: 0.7fr 1.3fr;
-        }
-
-        .grid-container:has(.quarter:nth-child(4):hover) {
-            grid-template-columns: 0.7fr 1.3fr;
-            grid-template-rows: 0.7fr 1.3fr;
-        }
-
+        /* Hide details by default */
         .quarter-details {
             display: none;
         }
 
         @media (max-width: 768px) {
-            .grid-container {
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-            }
-
             .quarter-content {
                 font-size: clamp(1.5rem, 6vw, 2.5rem);
+            }
+            .quarter:hover {
+                transform: scale(1.05); /* Smaller scale for mobile screens */
             }
         }
     </style>
@@ -108,19 +94,19 @@
 <body>
     <div class="grid-container">
         <div class="quarter">
-            <h2 class="quarter-content">Arte</h2>
+            <h2 class="quarter-content">Art</h2>
         </div>
 
         <div class="quarter">
-            <h2 class="quarter-content">Diseño</h2>
+            <h2 class="quarter-content">Design</h2>
         </div>
 
         <div class="quarter">
-            <h2 class="quarter-content">Ideas</h2>
+            <h2 class="quarter-content">Music</h2>
         </div>
 
         <div class="quarter">
-            <h2 class="quarter-content">Shop</h2>
+            <h2 class="quarter-content">Contact</h2>
         </div>
     </div>
 </body>
