--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-
         * {
             margin: 0;
             padding: 0;
@@ -14,7 +12,10 @@
         }
 
         body {
-            font-family: 'Montserrat', sans-serif;
+            /* Helvetica Bold Italic stack */
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-weight: 700;
+            font-style: italic;
             overflow: hidden;
             height: 100vh;
             width: 100vw;
@@ -35,23 +36,21 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            /* Shorter duration (0.25s) for a quicker feel */
             transition: transform 0.25s ease-out, z-index 0s;
             z-index: 1;
-            overflow: hidden;
         }
 
         .quarter-content {
             font-size: clamp(2rem, 5vw, 4rem);
-            font-weight: 700;
-            letter-spacing: 0.05em;
+            letter-spacing: -0.02em; /* Tighter tracking typical of Helvetica Bold */
+            backface-visibility: hidden; 
         }
 
-        /* Massive 300% Growth Effect */
+        /* 1.9x Scale */
         .quarter:hover {
-            transform: scale(3); 
-            z-index: 100; /* Keeps the hovered box on top of everything else */
-            box-shadow: 0 0 100px rgba(0,0,0,0.5);
+            transform: scale(1.9); 
+            z-index: 100;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.4);
         }
 
         /* Color Palette */
@@ -60,12 +59,9 @@
         .quarter:nth-child(3) { background: #979797; color: #ffffff; }
         .quarter:nth-child(4) { background: #C8322D; color: #ffffff; }
 
-        .quarter-details { display: none; }
-
         @media (max-width: 768px) {
-            /* On mobile, 300% might be too large; scaled slightly for visibility */
-            .quarter:hover { transform: scale(2); }
-            .quarter-content { font-size: 1.5rem; }
+            .quarter:hover { transform: scale(1.4); }
+            .quarter-content { font-size: 1.8rem; }
         }
     </style>
 </head>
