--- a/index.html
+++ b/index.html
@@ -28,21 +28,30 @@
             position: relative;
         }
 
-        /* Center Name Styling */
-        .center-name {
+        /* Container for the centered name */
+        .name-wrapper {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            z-index: 200; /* Above the hovered boxes */
+            z-index: 200;
             font-weight: 700;
-            font-style: normal; /* Non-italic */
+            font-style: normal;
             font-size: clamp(2.5rem, 8vw, 6rem);
             white-space: nowrap;
-            pointer-events: none; /* Allows hovering the boxes underneath */
-            
-            /* This creates the color split effect automatically */
-            color: #fff;
+            pointer-events: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        /* Layered text to handle the precise color split */
+        .name-layer {
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             mix-blend-mode: difference;
         }
 
@@ -52,7 +61,7 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            transition: transform 0.12s ease-out, z-index 0s;
+            transition: transform 0.12s ease-out;
             z-index: 1;
         }
 
@@ -70,7 +79,7 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
         }
 
-        /* HEX Colors */
+        /* HEX Color Palette from image */
         .quarter:nth-child(1) { background: #000000; color: #ffffff; }
         .quarter:nth-child(2) { background: #FFFFFF; color: #000000; }
         .quarter:nth-child(3) { background: #979797; color: #ffffff; }
@@ -79,13 +88,17 @@
         @media (max-width: 768px) {
             .quarter:hover { transform: scale(1.2); }
             .quarter-content { font-size: 1.8rem; }
-            .center-name { font-size: 2.5rem; }
+            .name-wrapper { font-size: 2.5rem; }
         }
     </style>
 </head>
 <body>
 
-    <div class="center-name">Emerson Racette</div>
+    <div class="name-wrapper">
+        <div class="name-layer" style="color: #fff;">
+            Emerson Racette
+        </div>
+    </div>
 
     <div class="grid-container">
         <div class="quarter"><h2 class="quarter-content">Art</h2></div>
